tests/asm-link/nonexist-include/rgbasm.err
error: unable to find "nonexist-include.inc"
   ╭─[ test.asm:1:9 ]
   │
 1 │ INCLUDE "nonexist-include.inc"
   │         ───────────┬──────────  
   │                    ╰──────────── no such file or directory
───╯
1 error generated.
